[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["BrandonGel <34258122+BrandonGel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
